# wallet_api

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 80b5849c8f95_init.py  db2752e08230_initial_schema.py
app/: config.py  main.py  security.py
app/api/: deps.py
app/api/v1/: auth.py  wallets.py
app/db/: base.py  models.py  session.py
app/exceptions/: auth.py  wallet.py
app/schemas/: users.py  wallets.py
app/services/: __init__.py  auth.py  wallet.py
tests/: conftest.py  test_wallets.py
